# fantastic-train

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TRAIN.txt  a  cmake_install.cmake  codecheck.sh  compile_commands.json  echolog  echolog.sublime-workspace  fantastic-train.sublime-workspace  main
Binaries/: main
Includes/: bases.hpp  fantastic-train.hpp  findwayBases.hpp  geometry.hpp  grapher.hpp  lib.hpp  math.hpp  pathfinder.hpp  routines.hpp
Src/: bases.cpp  fantastic-train.cpp  findwayBases.cpp  geometry.cpp  grapher.cpp  lib.cpp  main.cpp  math.cpp  pathfinder.cpp  routines.cpp  routines.hpp
